--- a/hakkinda.html
+++ b/hakkinda.html
@@ -28,13 +28,9 @@
     <!-- Content Section -->
     <div class="content">
       <h1 class="heading">İran'ın Kalbine Hoş Geldiniz</h1>
-      <p class="para">Binlerce yıl süren ihtişamlı bir geçmişi, derin kültürü ve zarif mimarisiyle tanışın...</p>
-      <p class="para"><strong>Ahameniş İmparatorluğu</strong>, <strong>Büyük Cyrus</strong>'un önderliğinde MÖ 550’de kuruldu...</p>
-      <p class="para"><strong>Büyük Cyrus</strong>'un zaferleri, sadece askeri değil, aynı zamanda kültürel ve dini hoşgörüdeki eşsiz yaklaşımıyla da tanınır...</p>
-      <p class="para"><strong>Darius I</strong>, Ahameniş İmparatorluğu'nu zirveye taşımış ve en büyük askeri fetihlere imza atmıştır...</p>
-      <p class="para"><strong>Sasaniler</strong>, Ahamenişlerin mirasını devralarak İran’ı yeniden birleştirdi...</p>
-      <p class="para"><strong>Safevi Devleti</strong>, Şii İslam'ı devlet dini yaparak İran’ın iç ve dış politikasını yeniden şekillendirdi...</p>
-      <p class="para">Günümüzde İran, tarihi büyüklüğünü ve kültürel gücünü devam ettiren bir ülke olarak...</p>
+      <p class="para"Hooyar Lotfy Dunyanin en zeki ve yakisik... biri  (saka ) kendi ruhu ve tefekür gucuyla kendi memleketi irani anlatan  bir site yapmış</p>
+      <p class="para"><strong>lütfen saöma sapan şeyier soylemeyin allahın rizasi için </strong>, <strong></strong> her kese iyi günler </p>
+
       <audio autoplay loop src="Iran.mp3">play</audio>
  
     </div>
