--- a/index.html
+++ b/index.html
@@ -4,41 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persia'nın Kalbine Hoş Geldiniz</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" /> <!-- Link to external CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <video autoplay muted loop playsinline>
-      <source src="Little Dark Age - Cyrus the Great.mp4" type="video/mp4" />
-    </video>
+    <header>
 
-    <!-- Content Section with Logo and Button -->
+      <div class="menu">
+        <a href="iran.html"><i class="fas fa-home"></i> Ana Sayfa</a>
+        <a href="hakkinda.html"><i class="fas fa-info-circle"></i> Hakkında</a>
+        
+      </div>
+    </header>
+
+    <!-- Video Section -->
+    <div class="video-container">
+      <video autoplay muted loop playsinline>
+        <source src="Little Dark Age - Cyrus the Great.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <!-- Content Section -->
     <div class="content">
-      <!-- Big Logo -->
-      <img width="130px" src="logo.png" alt="Persia'nın Kalbine" class="logo" />
-      <!-- Button to navigate to the main site -->
-       <br><br><br><br>              <br><br><br><br>
-      <a style="background-color: rgba(0, 0, 0, 0.47); border-radius: 12px; padding: 20px;" href="iran.html" class="btn-enter">
-        <span><b>Ana Sayfaya Gir</b></span>
-      </a>
-      <audio autoplay loop   src="Iran.mp3"></audio>
+      <h1 class="heading">İran'ın Kalbine Hoş Geldiniz</h1>
+      <p class="para">Binlerce yıl süren ihtişamlı bir geçmişi, derin kültürü ve zarif mimarisiyle tanışın...</p>
+      <p class="para"><strong>Ahameniş İmparatorluğu</strong>, <strong>Büyük Cyrus</strong>'un önderliğinde MÖ 550’de kuruldu...</p>
+      <p class="para"><strong>Büyük Cyrus</strong>'un zaferleri, sadece askeri değil, aynı zamanda kültürel ve dini hoşgörüdeki eşsiz yaklaşımıyla da tanınır...</p>
+      <p class="para"><strong>Darius I</strong>, Ahameniş İmparatorluğu'nu zirveye taşımış ve en büyük askeri fetihlere imza atmıştır...</p>
+      <p class="para"><strong>Sasaniler</strong>, Ahamenişlerin mirasını devralarak İran’ı yeniden birleştirdi...</p>
+      <p class="para"><strong>Safevi Devleti</strong>, Şii İslam'ı devlet dini yaparak İran’ın iç ve dış politikasını yeniden şekillendirdi...</p>
+      <p class="para">Günümüzde İran, tarihi büyüklüğünü ve kültürel gücünü devam ettiren bir ülke olarak...</p>
+      <audio autoplay loop src="Iran.mp3">play</audio>
+ 
     </div>
 
     <!-- Footer Section -->
     <footer class="footer">
-      <div class="footer-icons">
-        <a href="https://www.facebook.com" class="social-icon">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://www.linkedin.com" class="social-icon">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://www.instagram.com" class="social-icon">
-          <i class="fab fa-instagram"></i>
-        </a>
+      <div class="social-links">
+        <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
       </div>
       <p>&copy; 2024 Hooyar Lotfy, Tüm hakları saklıdır.</p>
     </footer>
