--- a/iran.html
+++ b/iran.html
@@ -4,52 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persia'nın Kalbine Hoş Geldiniz</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" /> <!-- Link to the external CSS file -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
+
       <div class="menu">
-        <a href="iran.html">
-          <i class="fas fa-home"></i> Ana Sayfa
-        </a>
-        <a href="hakkinda.html">
-          <i class="fas fa-info-circle"></i> Hakkında
-        </a>
+        <a href="iran.html"><i class="fas fa-home"></i> Ana Sayfa</a>
+        <a href="hakkinda.html"><i class="fas fa-info-circle"></i> Hakkında</a>
+        
       </div>
     </header>
-    <br><br><br><br>
 
-    <video autoplay muted loop playsinline>
-      <source src="Little Dark Age - Cyrus the Great.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-
-    <div class="content">
-      <h1>Persia'nın Kalbine Hoş Geldiniz</h1>
-      <p>
-        Binlerce yıl süren ihtişamlı bir geçmişi, derin kültürü ve zarif
-        mimarisiyle tanışın. İran'ın eşsiz güzelliklerine adım atın ve
-        geçmişiyle bugünü keşfedin.
-      </p>
-      <audio autoplay loop src="Iran.mp3">play</audio>
+    <!-- Video Section -->
+    <div class="video-container">
+      <video autoplay muted loop playsinline>
+        <source src="Little Dark Age - Cyrus the Great.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
 
-    <br><br><br><br>
+    <!-- Content Section -->
+    <div class="content">
+      <h1 class="heading">İran'ın Kalbine Hoş Geldiniz</h1>
+      <p class="para">Binlerce yıl süren ihtişamlı bir geçmişi, derin kültürü ve zarif mimarisiyle tanışın...</p>
+      <p class="para"><strong>Ahameniş İmparatorluğu</strong>, <strong>Büyük Cyrus</strong>'un önderliğinde MÖ 550’de kuruldu...</p>
+      <p class="para"><strong>Büyük Cyrus</strong>'un zaferleri, sadece askeri değil, aynı zamanda kültürel ve dini hoşgörüdeki eşsiz yaklaşımıyla da tanınır...</p>
+      <p class="para"><strong>Darius I</strong>, Ahameniş İmparatorluğu'nu zirveye taşımış ve en büyük askeri fetihlere imza atmıştır...</p>
+      <p class="para"><strong>Sasaniler</strong>, Ahamenişlerin mirasını devralarak İran’ı yeniden birleştirdi...</p>
+      <p class="para"><strong>Safevi Devleti</strong>, Şii İslam'ı devlet dini yaparak İran’ın iç ve dış politikasını yeniden şekillendirdi...</p>
+      <p class="para">Günümüzde İran, tarihi büyüklüğünü ve kültürel gücünü devam ettiren bir ülke olarak...</p>
+      <audio autoplay loop src="Iran.mp3">play</audio>
+ 
+    </div>
+
+    <!-- Footer Section -->
     <footer class="footer">
-      <div class="footer">
-        <a href="https://www.facebook.com" class="social-icon">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://www.linkedin.com" class="social-icon">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://www.instagram.com" class="social-icon">
-          <i class="fab fa-instagram"></i>
-        </a>
+      <div class="social-links">
+        <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
       </div>
       <p>&copy; 2024 Hooyar Lotfy, Tüm hakları saklıdır.</p>
     </footer>
